fix: npm install in submodule

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+      - name: Install dependencies in submodule
+        uses: bahmutov/npm-install@v1.4.5
+        with:
+          working-directory: shoukaku
       - name: Install, build, and upload your site
         uses: withastro/action@v2
 
