--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "update-submodules": "git submodule update --remote"
   },
   "dependencies": {
     "@astrojs/check": "^0.8.2",
