--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "update-submodules": "git submodule update --remote"
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.2",
-    "@astrojs/starlight": "^0.25.1",
-    "astro": "^4.12.2",
+    "@astrojs/check": "0.9.2",
+    "@astrojs/starlight": "0.25.5",
+    "astro": "4.13.3",
     "astro-og-canvas": "^0.5.3",
     "sharp": "^0.33.4",
     "starlight-package-managers": "^0.6.0",
-    "starlight-typedoc": "^0.13.1",
-    "starlight-versions": "^0.1.0",
-    "typescript": "^5.5.3"
+    "starlight-typedoc": "^0.15.0",
+    "starlight-versions": "^0.2.0",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^7.16.1",
-    "eslint": "^9.7.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-mdx": "^3.1.5",
